Fix modernizer 3.4.0 violations
Replace Guava Joiner with String.join, Collections.sort with
List.sort, and String.format with String.formatted.  References #1049.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>